# mimo-deepfake-detection

./: .env.example  .gitignore  AGENTS.md  README.md  evaluate.py  pyproject.toml  train.py
configs/: README.md  config.yaml
configs/dataset/: asvspoof2019.yaml
configs/finetune_comparison/: adapter.yaml  base.yaml  frozen.yaml  full.yaml  full_reg_mild.yaml  full_reg_moderate.yaml  full_reg_strong.yaml  full_regularized.yaml  hubert_adapter.yaml  hubert_frozen.yaml  lora.yaml  partial.yaml
configs/frontend/: encodec.yaml  hubert_adapter.yaml  hubert_frozen.yaml  mimo.yaml  wav2vec2.yaml  wav2vec2_adapter.yaml
configs/model/: default.yaml
configs/publish/: mimo_adapter_exploratory.yaml  mimo_frozen.yaml  mimo_full.yaml  wav2vec2_adapter.yaml  wav2vec2_frozen.yaml  wav2vec2_full_external.yaml
configs/rawboost/: 24khz.yaml  default.yaml
configs/training/: default.yaml
docs/: README.md
docs/current/: ASSESSMENT_CONCLUSION.md  ASVSPOOF_DATA_LAYOUT.md  AUDIT_PROTOCOL.md  CHECKPOINT_PROVENANCE_GAPS.md  CODEBASE_AUDIT.md  CODECFAKE_CORS_AUDIT.md  CODECFAKE_OFFICIAL_SPLITS.md  CODE_REWORK_PLAN.md  CONTROLLED_SMOKE_TRANSCRIPT.md  CORRECTED_MAIN_TABLE_DRAFT.md  DOCS_INDEX.md  EVAL_EXECUTION_PLAN.md  EXPERIMENT_LOGGING_PROTOCOL.md  HANDOFF.md  (+54 more)
mimodf/: __init__.py  __main__.py  cli.py  config.py  provenance.py
scripts/: README.md  run_wave3a_determinism_clamtts_xlsr_frozen_seed42_v1.sh  run_wave3a_overnight_gpu_queue_2026_05_31_v1.sh  run_wave3a_peft_allfolds_confirmatory_seeds123_2024_v1.sh  run_wave3a_peft_allfolds_confirmatory_seeds123_2024_v1_resume.sh  run_wave3a_peft_allfolds_confirmatory_seeds123_2024_v3_batch2.sh  run_wave3a_peft_batch14_seed42_allfolds_v1.sh  run_wave3a_peft_batch_size_feasibility_v1.sh  run_wave3a_peft_batch_size_feasibility_v2.sh  run_wave3a_peft_maskgct_seed_stability_v1.sh  run_wave3a_seed42_allfolds_xlsr_frozen_deterministic_v1.sh  run_wave3a_seed42_allfolds_xlsr_frozen_deterministic_v1_resume.sh  run_wave3a_seed42_allfolds_xlsr_frozen_v1.sh  wave3_reassessment_2026_05_31_v1.py  wave3a_maskgct_failure_diagnostic_v1.py  wave3a_peft_maskgct_seed_stability_diagnostic_v1.py  wave3a_peft_vs_frozen_deep_diagnostic_v1.py
src/: __init__.py  data_utils.py  experiment.py  linear_probe.py  model.py  rawboost.py  results.py
tests/: test_artifact_checks.py  test_artifact_gaps.py  test_asvspoof_data.py  test_audit_package.py  test_case_contrast.py  test_codecfake_data.py  test_codecfake_loader.py  test_codecfake_splits.py  test_codecfake_training_plan.py  test_config_validation.py  test_dependency_audit.py  test_evaluate_scoring.py  test_evaluation_plan.py  test_evaluation_run.py  test_experiment_cli.py  test_experiment_system.py  test_feature_drift.py  test_feature_probe.py  test_feature_strategy.py  test_finetune.py  test_legacy_model_factories.py  test_main_table_provenance.py  test_mechanism_analysis.py  test_media_transforms.py  test_mimo_feature_extraction.py  test_native_50hz.py  test_official_scoring.py  test_prediction_diagnostics.py  test_projection.py  test_protocol_sampling.py  test_rawboost_scaling.py  test_release_gate.py  test_report_aggregate_compare.py  test_report_index.py  test_research_log.py  test_research_matrix.py  test_score_comparison.py  test_score_file_writer.py  test_tdcf_summary.py  test_torch_eval.py  (+6 more)
(+71 files in other folders)
